testdata/baselines/reference/submodule/conformance/YieldExpression17_es6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
YieldExpression17_es6.ts(1,15): error TS2378: A 'get' accessor must return a value.
YieldExpression17_es6.ts(1,23): error TS1163: A 'yield' expression is only allowed in a generator body.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== YieldExpression17_es6.ts (2 errors) ====
    var v = { get foo() { yield foo; } }
                  ~~~
!!! error TS2378: A 'get' accessor must return a value.
                          ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.